# heyoka.py

./: .clangd  .gitignore  .travis.yml  CMakeLists.txt  README.md  acknowledgement.html  advanced_tutorials.html  api_exsys.html  api_integrators.html  api_lagham.html  appveyor.yml  basic_tutorials.html  benchmarks.html  breaking_changes.html  changelog.html  environment.yml  examples.html  examples_astro.html  examples_event.html  examples_ml.html  examples_others.html  genindex.html  index.html  install.html  objects.inv  pyproject.toml  search.html  searchindex.js  tut_taylor_method.html  tutorials.html
.circleci/: config.yml
.github/workflows/: gh_actions_ci.yml  static.yml
_sources/: acknowledgement.rst.txt  advanced_tutorials.rst  advanced_tutorials.rst.txt  basic_tutorials.rst  basic_tutorials.rst.txt  benchmarks.rst  breaking_changes.rst  breaking_changes.rst.txt  changelog.rst  changelog.rst.txt  examples.rst  examples.rst.txt  examples_astro.rst  examples_event.rst.txt  examples_ml.rst  examples_others.rst  index.md  index.md.txt  install.rst  install.rst.txt  tutorials.rst  tutorials.rst.txt
_sources/autosummary_generated/: heyoka.diff_args.rst  heyoka.diff_tensors.rst  heyoka.dtens.rst  heyoka.expression.rst  heyoka.hamiltonian.rst  heyoka.lagrangian.rst  heyoka.make_vars.rst  heyoka.par.rst  heyoka.taylor_adaptive.rst
_sources/notebooks/: Batch mode overview.ipynb.txt  Box control for Formation Flying Satellites.ipynb  Comparing coordinate systems.ipynb  Comparing coordinate systems.ipynb.txt  Customising the adaptive integrator.ipynb  Customising the adaptive integrator.ipynb.txt  Dense output.ipynb.txt  Event detection.ipynb  Event detection.ipynb.txt  Inverting Kepler's equation in ODEs.ipynb.txt  Long term stability of Trappist-1.ipynb  Long term stability of Trappist-1.ipynb.txt  NeuralODEs.ipynb  Non-autonomous systems.ipynb.txt  Optimal Control of the Lotka-Volterra equations.ipynb  Optimal Control of the Lotka-Volterra equations.ipynb.txt  Outer Solar System.ipynb  Outer Solar System.ipynb.txt  Periodic orbits in the CR3BP.ipynb  Planetary embryos.ipynb  Planetary embryos.ipynb.txt  Poincaré sections.ipynb.txt  Pseudo arc-length continuation in the CR3BP.ipynb  Sampling events.ipynb.txt  Scaled outer Solar System.ipynb.txt  The expression system.ipynb  (+32 more)
_static/: documentation_options.js
autosummary_generated/: heyoka.diff_args.html  heyoka.diff_tensors.html  heyoka.dtens.html  heyoka.expression.html  heyoka.hamiltonian.html  heyoka.lagrangian.html  heyoka.make_vars.html  heyoka.par.html  heyoka.taylor_adaptive.html
doc/: Makefile  acknowledgement.rst  advanced_tutorials.rst  api_common_kwargs.rst  api_eop_data.rst  api_eop_sw_data.rst  api_exsys.rst  api_integrators.rst  api_jit.rst  api_lagham.rst  api_model.rst  api_model_atmosphere.rst  api_model_coordinates.rst  api_model_dynamics.rst  api_model_eop_sw.rst  api_model_sgp4.rst  api_model_theories.rst  api_model_time.rst  api_sw_data.rst  api_var_ode_sys.rst  astrodynamics.rst  basic_tutorials.rst  benchmarks.rst  biblio.bib  breaking_changes.rst  changelog.rst  conf.py  conf.py.in  ex_sys_tutorials.rst  examples.rst  examples_astro.rst  examples_event.rst  examples_ml.rst  examples_others.rst  examples_var_ode_sys.rst  index.md  index.rst  install.rst  n_body_solar_system.rst  three_body.rst  (+9 more)
heyoka/: CMakeLists.txt  __init__.py  _ensemble_impl.py  _sgp4_test_data.py  _sympy_utils.py  _test_batch_integrator.py  _test_celmec.py  _test_cfunc.py  _test_diskcache.py  _test_dtens.py  _test_elp2000.py  _test_ensemble.py  _test_eop_data.py  _test_expression.py  _test_lagham.py  _test_memcache.py  _test_model.py  _test_mp.py  _test_real.py  _test_real128.py  _test_scalar_integrator.py  _test_sgp4_propagator.py  _test_sw_data.py  _test_sympy.py  _test_taylor_add_jet.py  _test_var_integrator.py  _test_var_ode_sys.py  _test_vsop2013.py  _version.py.in  cfunc.cpp  cfunc.hpp  common_utils.cpp  common_utils.hpp  core.cpp  custom_casters.cpp  custom_casters.hpp  docstrings.cpp  docstrings.hpp  docstrings_llvm_state.cpp  docstrings_models.cpp  (+53 more)
heyoka/callback/: __init__.py
heyoka/model/: __init__.py
notebooks/: Batch mode overview.html  Box control for Formation Flying Satellites.html  Comparing coordinate systems.html  Customising the adaptive integrator.html  Dense output.html  Event detection.html  Inverting Kepler's equation in ODEs.html  Long term stability of Trappist-1.html  NeuralHamiltonianODEs.html  NeuralODEs.html  Non-autonomous systems.html  ODEs and neural networks.html  ODEs with parameters.html  Optimal Control of the Lotka-Volterra equations.html  Outer Solar System.html  Periodic orbits in the CR3BP.html  Planetary embryos.html  Poincaré sections.html  Pseudo arc-length continuation in the CR3BP.html  Sampling events.html  Scaled outer Solar System.html  The Keplerian billiard.html  The adaptive integrator.html  The expression system.html  The restricted three-body problem.html  The two-fixed elliptic billiard.html  The variational equations.html  The wavy ramp.html  arbitrary_precision.html  compiled_functions.html  computing_derivatives.html  definite_integrals.html  differentiable_atmosphere.html  elp2000.html  ensemble_batch_perf.html  ensemble_mode.html  ev_sensitivity.html  ex_system_revisited.html  ext_precision.html  ffnn.html  (+12 more)
tools/: ci_test_runner.py  circleci_bionic_gcc7_heyoka_head_38.sh  circleci_conda_heyoka_head.sh  circleci_conda_heyoka_head_310.sh  circleci_conda_heyoka_head_311.sh  circleci_conda_heyoka_head_312.sh  circleci_conda_heyoka_head_38.sh  circleci_conda_heyoka_head_39.sh  circleci_conda_heyoka_head_release_310.sh  circleci_conda_heyoka_head_release_311.sh  circleci_focal_gcc9_heyoka_head_38.sh  circleci_focal_gcc9_heyoka_head_release_38.sh  circleci_focal_gcc9_heyoka_stable_38.sh  circleci_ubuntu_arm64.sh  conda_docs.sh  cpp_dockerfile  gha_conda_asan.sh  gha_conda_docs.sh  gha_conda_static.sh  gha_manylinux.sh  gha_osx.sh  gha_osx_heyoka_head.sh  gha_osx_heyoka_head_static.sh  gha_osx_heyoka_stable.sh  travis_docker.sh  travis_ubuntu_ppc64.sh  wheel_setup.py
(+80 files in other folders)
