[build-system]
build-backend = 'scikit_build_core.build'
requires = ['scikit-build-core', 'pybind11 >= 2.10', 'numpy >= 2']

[project]
name = 'heyoka'
version = '7.0.1'
description = "Python library for ODE integration via Taylor's method and LLVM"
readme = 'README.md'
requires-python = '>=3.9'
dependencies = ['cloudpickle', 'numpy >= 2']
authors = [{ name = 'Francesco Biscani', email = 'bluescarni@gmail.com' }]
license = { text = 'MPL-2.0' }
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]
keywords = ['science', 'math', 'physics', 'ode']

[project.urls]
Documentation = "https://bluescarni.github.io/heyoka.py/index.html"
Repository = "https://github.com/bluescarni/heyoka.py"

[project.optional-dependencies]
sympy = ["sympy", "mpmath"]
sgp4 = ["skyfield"]

[tool.scikit-build]
# Avoid copying the C++ source files when building
# binary wheels.
wheel.packages = []
# Enable IPO.
cmake.define.HEYOKA_PY_ENABLE_IPO = "ON"
# Do not include the docs in the sdist.
sdist.exclude = ["doc"]
